# speak-english

./: build.gradle  gradle.properties
app/: build.gradle  google-services.json
app/src/androidTest/java/com/example/leedonghun/speakenglish/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: countrylist.json
app/src/main/cpp/: CMakeLists.txt  Image-filtering.cpp  com_example_leedonghun_speakenglish_ActivityForRoomImageChange.h  com_example_leedonghun_speakenglish_FaceDetectionAlbum.h  com_example_leedonghun_speakenglish_FaceDetectionCamera.h  com_example_leedonghun_speakenglish_MakeidForteacher.h  face-detect-album.cpp  face-detect.cpp  native-lib.cpp
app/src/main/java/com/example/leedonghun/speakenglish/: ActivityForGetWordFromImage.java  ActivityForMyDictionary.java  ActivityForRoomImageChange.java  ActivityForWordExam.java  AnswerSound.java  (+103 more)
app/src/main/res/anim/: rotate_image_view.xml  shakeedittext.xml
app/src/main/res/color/: bottom_nav_color.xml
app/src/main/res/drawable/: border.xml  border1.xml  circletextview.xml  hyperlink_underline.xml  loadingactivuty.xml  roundbutton.xml  roundbuttonforteacher.xml  roundedittext.xml  roundimage.xml  stylebtnforcheckid.xml
app/src/main/res/font/: dohyunfont.xml  juachefont.xml
app/src/main/res/layout/: activit_makeid.xml  activity_changenewpassword.xml  activity_emailcheck.xml  activity_exchange_earning_point.xml  activity_findpassword.xml  activity_for_my_dictionary.xml  activity_for_room_image_change.xml  activity_for_word_exam.xml  activity_inputsecurekey.xml  activity_login.xml  alert_activity_for_exchange_earning_point.xml  cardviewforloginteacherinfo.xml  cardviewforteacherinfo.xml  changemyinfo_student.xml  changemyinfo_teacher.xml  chatting_drawable_navigation_for_student.xml  chatting_drawable_navigation_for_teacher.xml  chatting_filebtn_bottom_fragment.xml  chatting_image_magnify.xml  chatting_media_files_magnify.xml  chatting_room_activity.xml  chatting_room_list_container.xml  chatting_room_mediafiles_container.xml  chatting_video_play_activity.xml  chatting_viewpager_page.xml  chattingmember_recyclervie_item.xml  childeview_for_viewpager_in_mediafiles.xml  custom_dialog_loginapi.xml  custom_teacherlogin_alarm_notification.xml  custom_teacherlogin_notification.xml  customtoast.xml  dialog_for_setting_teacher_reservation_time.xml  dialog_for_teacher_give_feedback.xml  exam_result.xml  exchange_request_list_item.xml  face_detection_album.xml  face_detection_take_photo.xml  fragment_for_chattinginstudent.xml  fragment_for_classteacher.xml  fragment_for_classtypeinstudent.xml  (+44 more)
app/src/main/res/menu/: available_class_pop_up.xml  bottom_navigation.xml  bottom_navigation_teacher.xml  chatting_toolbar_drawable_btn.xml  chattingdrawable_navigatio_studentside.xml  chattingdrawable_navigation_teacherside.xml  drawable_naviagation_for_chatting_teacher.xml  menu_student_drawable.xml  menu_teacher_drawable.xml
app/src/main/res/values/: back_array.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
opencv/java/src/org/opencv/android/: CameraBridgeViewBase.java
(+7 files in other folders)
